Added VSCode task for formatting all source files with dartfmt

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,12 @@
             "type": "shell",
             "group": "test",
             "command": "webdev serve --auto restart"
+        },
+        {
+            "label": "Format code with dartfmt",
+            "type": "shell",
+            "command": "dartfmt lib/ -w",
+            "problemMatcher": []
         }
     ]
 }
