--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dev_dependencies:
   build_runner: ^1.6.5
   build_web_compilers: ^2.1.5
   pedantic: ^1.8.0+1
+  firebase: ^5.0.4
 
 dependency_overrides:
   flutter_web:
