--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 dependencies:
   flutter_web: any
   flutter_web_ui: any
+  validators: ^2.0.0+1
 
 dev_dependencies:
   build_runner: ^1.6.5
